# arch-pkg-galaxy

./: Cargo.toml  LICENSE  README.md
src/: data.rs  main.rs  web.rs
src/static/: app.js  index.html  styles.css
