[package]
name = "pkg-galaxy"
version = "0.1.0"
edition = "2024"

[dependencies]
alpm = "5.0.2"
axum = "0.8.8"
axum-embed = "0.1.0"
rust-embed = { version = "8.5.0", features = ["compression"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
opener = "0.8.3"
